--- a/src/components/searchbar/searchbar.module.css
+++ b/src/components/searchbar/searchbar.module.css
@@ -33,7 +33,7 @@
   overflow: hidden;
 }
 
-.SearchForm-button {
+.SearchFormButton {
   display: inline-block;
   width: 48px;
   height: 48px;
@@ -48,11 +48,11 @@
   outline: none;
 }
 
-.SearchForm-button:hover {
+.SearchFormButton:hover {
   opacity: 1;
 }
 
-.SearchForm-button-label {
+.SearchFormButtonLabel {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -64,7 +64,7 @@
   border: 0;
 }
 
-.SearchForm-input {
+.SearchFormInput {
   display: inline-block;
   width: 100%;
   font: inherit;
@@ -75,7 +75,7 @@
   padding-right: 4px;
 }
 
-.SearchForm-input::placeholder {
+.SearchFormInput::placeholder {
   font: inherit;
   font-size: 18px;
 }
